Update detail member information

--- a/GA02/HKD/members/23122033/23122033.html
+++ b/GA02/HKD/members/23122033/23122033.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <title>Thông tin chi tiết - Trần Thị B</title>
+    <title>Thông tin chi tiết - Lê Hoàng Minh Huy</title>
     <link rel="stylesheet" href="default.css" />
     <style>
       .member-detail-container {
@@ -62,7 +62,8 @@
       <div class="info">
         <strong>Email:</strong> 23122033@student.hcmus.edu.vn
       </div>
-      <div class="info"><strong>Vai trò:</strong> Thiết kế giao diện</div>
+      <div class="info"><strong>Ngày sinh:</strong> 31/05/2005</div>
+      <div class="info"><strong>Số điện thoại:</strong> 0938811069</div>
       <a href="../../default.html" class="back-link">← Quay lại trang nhóm</a>
     </div>
   </body>
