--- a/GA02/HKD/members/23122035/23122035.html
+++ b/GA02/HKD/members/23122035/23122035.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <title>Thông tin chi tiết - Lê Văn C</title>
+    <title>Thông tin chi tiết - Châu Văn Minh Khoa</title>
     <link rel="stylesheet" href="default.css" />
     <style>
       .member-detail-container {
@@ -62,7 +62,8 @@
       <div class="info">
         <strong>Email:</strong> 23122035@student.hcmus.edu.vn
       </div>
-      <div class="info"><strong>Vai trò:</strong> Lập trình backend</div>
+      <div class="info"><strong>Ngày sinh:</strong> 05/09/2005</div>
+      <div class="info"><strong>Số điện thoại:</strong> 0916158557</div>
       <a href="../../default.html" class="back-link">← Quay lại trang nhóm</a>
     </div>
   </body>
