--- a/GA02/HKD/members/23120034/23120034.html
+++ b/GA02/HKD/members/23120034/23120034.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <title>Thông tin chi tiết - Nguyễn Văn A</title>
+    <title>Thông tin chi tiết - Ứng Thị Thùy Dương</title>
     <link rel="stylesheet" href="default.css" />
     <style>
       .member-detail-container {
@@ -62,7 +62,8 @@
       <div class="info">
         <strong>Email:</strong> 23120034@student.hcmus.edu.vn
       </div>
-      <div class="info"><strong>Vai trò:</strong> Trưởng nhóm</div>
+      <div class="info"><strong>Ngày sinh:</strong> 14/11/2005</div>
+      <div class="info"><strong>Số điện thoại:</strong> 0965393488</div>
       <a href="../../default.html" class="back-link">← Quay lại trang nhóm</a>
     </div>
   </body>
