--- a/GA02/HKD/members/23122033/23122033.html
+++ b/GA02/HKD/members/23122033/23122033.html
@@ -3,52 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Thông tin chi tiết - Lê Hoàng Minh Huy</title>
-    <link rel="stylesheet" href="default.css" />
-    <style>
-      .member-detail-container {
-        max-width: 500px;
-        margin: 40px auto;
-        background: #fff;
-        border-radius: 16px;
-        box-shadow: 0 4px 24px rgba(33, 150, 243, 0.15);
-        padding: 32px 24px;
-        text-align: center;
-      }
-      .member-photo {
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-        border-radius: 50%;
-        border: 4px solid #2196f3;
-        margin-bottom: 16px;
-        box-shadow: 0 2px 12px rgba(33, 150, 243, 0.12);
-      }
-      h1 {
-        color: #1565c0;
-        margin-bottom: 10px;
-        font-size: 2em;
-      }
-      .info {
-        color: #1976d2;
-        font-size: 1.1em;
-        margin-bottom: 8px;
-      }
-      .back-link {
-        display: inline-block;
-        margin-top: 24px;
-        color: #2196f3;
-        text-decoration: none;
-        font-weight: bold;
-        border: 1px solid #2196f3;
-        padding: 6px 18px;
-        border-radius: 6px;
-        transition: background 0.2s, color 0.2s;
-      }
-      .back-link:hover {
-        background: #2196f3;
-        color: #fff;
-      }
-    </style>
+    <link rel="stylesheet" href="../../default.css" />
   </head>
   <body>
     <div class="member-detail-container">
@@ -59,10 +14,9 @@
       />
       <h1>Lê Hoàng Minh Huy</h1>
       <div class="info"><strong>MSSV:</strong> 23122033</div>
-      <div class="info">
-        <strong>Email:</strong> 23122033@student.hcmus.edu.vn
-      </div>
-      <div class="info"><strong>Ngày sinh:</strong> 31/05/2005</div>
+      <div class="info"><strong>Ngày sinh:</strong> 31/01/2005</div>
+      <div class="info"><strong>Email trường:</strong> 23122033@student.hcmus.edu.vn</div>
+      <div class="info"><strong>Email cá nhân:</strong> minhhuy31012004@gmail.com</div>
       <div class="info"><strong>Số điện thoại:</strong> 0938811069</div>
       <a href="../../default.html" class="back-link">← Quay lại trang nhóm</a>
     </div>
