--- a/IA02/index.html
+++ b/IA02/index.html
@@ -1,3 +1,4 @@
+<!-- Note: AI sinh code tổng quan, tuy nhiên em đã sửa những phần thuộc tính của các nút 1/x, x^2, căn x, ... để phù hợp với yêu cầu -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <!-- Sidebar panel -->
     <div class="side-panel" id="sidePanel">
         <div class="side-panel-header">
